Change header quote language to polish

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,5 +9,5 @@
 		<li><a href="">f</a></li>
 		<li><a href="">y</a></li>
 	</ul>
-	<h2 class="page-header--quote noselect">Let's discover IT world together!</h2>
+	<h2 class="page-header--quote noselect">Odkrywajmy razem świat IT!</h2>
 </header>
