--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 ---
-<ul class="post-list">
-	{% for post in site.categories[page.category] %}
-			<li>{{ post }}</li>
-	{% endfor %}
-</ul>
+  <h1 class="page-heading">Wpisy z kategorii {{ site.categories_names[page.category] | escape }}</h1>
+
+  {{ content }}
+  {% assign posts = site.categories[page.category] %}
+  {% include post-list.html posts=posts %}
+
