--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -81,25 +81,20 @@
 
 .submenu {
 
-	display: flex;
+	display: none;
 	flex-flow: column;
 
 	position: relative;
-	z-index: -1;
 
 	list-style-type: none;
 	
 	margin-top: 70px;
 
-	transform: translateY(-100%);
-	transition: transform 1s ease-in-out;
-
 }
 
 .menu-item:hover > .submenu {
 
-	transform: translateY(0);
-	transition: transform .5s ease-in-out;
+	display: flex;
 
 }
 
@@ -114,7 +109,7 @@
 
 	display: block;
 
-	font-size: 34px;
+	font-size: 28px;
 	text-align: center;
 	font-family: Blrrpixs016;
 	text-decoration: none;
