--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
 	<ul class="menu">
 		<li class="menu-item">
 			<a href="/" class="menu-item--title noselect">
-			Strona glowna
+			Strona główna
 			</a>
 		</li>
 		<li class="menu-item">
