--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -3,29 +3,40 @@
 	<ul class="pagination-list">
 	{% if paginator.previous_page %}
 	<li class="pagination-item">
-		<a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="pagination-link"><span aria-hidden="true">←</span> Poprzednia strona</a>
+		<a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="pagination-link">&vltri;</a>
 	</li>
 	{% endif %}
 
-	{% for page in (1..paginator.total_pages) %}
+		{% if paginator.page > 2 and paginator.page < paginator.total_pages - 1 %} <!-- -->
+			{% assign start = paginator.page | minus: 1 %}
+			{% assign end = paginator.page | plus: 1 %}
+		{% elsif paginator.page > 2 and paginator.page > paginator.total_pages - 1 %}
+			{% assign start =  paginator.page | minus: 1 %}
+			{% assign end = paginator.total_pages %}
+		{% else %}
+			{% assign start = 1 %}
+			{% assign end = 3 %}
+		{% endif %}
+
+	{% for page in (start..end) %}
 	{% if page == paginator.page %}
 		<li class="pagination-item">
-			<span class="pagination-label">{{ page }}</span>
+			<span class="pagination-link pagination-link--label">{{ page }}</span>
 		</li>
 	{% elsif page == 1 %}
 		<li class="pagination-item">
-			<a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="pagination-link">{{ page }}</a>
+			<a href="/" class="pagination-link">{{ page }}</a>
 		</li>
 	{% else %}
 		<li class="pagination-item">
-			<a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}" class="pagination-link">{{ page }}</a>
+			<a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}" class="pagination-link link">{{ page }}</a>
 		</li>
 	{% endif %}
 	{% endfor %}
 
 	{% if paginator.next_page %}
-	<li class="pagination-item">
-		<a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="pagination-link">Następna strona <span aria-hidden="true">→</span></a>
+	<li class="pagination-item pagination-item--next">
+		<a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="pagination-link">&vrtri;</a>
 	</li>
 	{% endif %}
 	</ul>
