Inlcude pagination template to home layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
   {{ content }}
 
-	{{ paginator.posts }}
-
   {% include post-list.html posts=paginator.posts %}
+
+  {% include pagination.html paginator=paginator %}
 
