--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -32,7 +32,7 @@
 	margin: 0;
 
 	font-family: Blrrpixs016;
-	font-size: 56px;
+	font-size: 2.5rem;
 	text-shadow: 3px 3px green;
 	color: $mainColor;
 
@@ -43,7 +43,7 @@
 .page-header--quote {
 
 	font-family: Blrrpixs016;
-	font-size: 36px;
+	font-size: 1.5rem;
 
 	margin: 0;
 
@@ -81,7 +81,7 @@
 .page-header--socials > li > a {
 
 	font-family: Socials;
-	font-size: 34px;
+	font-size: 1.5rem;
 	text-decoration: none;
 
 	transition: font-size .2s ease-in-out; 
@@ -92,7 +92,7 @@
 
 .page-header--socials > li > a:hover {
 
-	font-size: 42px;
+	font-size: 1.8rem;
 
 	transition: font-size .2s ease-in-out; 
 
