--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -1,6 +1,6 @@
 .page-navigation {
 
- height: 70px;
+ height: 80px;
 
  border-top: 4px dashed $mainColor;
  border-bottom: 4px dashed $mainColor;
@@ -42,7 +42,7 @@
 
 	width: 100%;
 
-	font-size: 28px;
+	font-size: 1.2rem;
 	font-family: Blrrpixs016;
 	text-align: center;
 	text-decoration: none;
@@ -87,8 +87,10 @@
 	position: relative;
 
 	list-style-type: none;
+
+	padding-top: 4px;
 	
-	margin-top: 70px;
+	margin-top: 80px;
 
 }
 
@@ -109,11 +111,12 @@
 
 	display: block;
 
-	font-size: 28px;
+	font-size: 1.2rem;
 	text-align: center;
 	font-family: Blrrpixs016;
 	text-decoration: none;
 	color: $mainColor;
+	background: $backgroundColor;
 
 	padding: 10px 0px;
 
