--- a/_sass/pagination.scss
+++ b/_sass/pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
 
 	position: relative;
-	height: 40px;
+	height: 50px;
 
 }
 
@@ -10,8 +10,13 @@
 	display: flex;
 	flex-flow: row;
 
+	list-style-type: none;
+
 	position: absolute;
-	width: 500px;
+	left: 50%;
+	transform: translateX(-50%);
+
+	width: 800px;
 	height: inherit;
 
 }
@@ -19,11 +24,39 @@
 .pagination-item {
 
 	position: relative;
+	height: 100%;
 
 	margin: 0px 5px;
 
-	border: 2px solid green;
+	border-width: 6px 3px 3px 6px;
+	border-color: $mainColor green green $mainColor;
+	border-style: solid;
 
-	flex: 1;
-		
+	flex: 0 1 50px;
+
+}
+
+.pagination-item:hover {
+
+	border-width: 3px;
+
+}
+
+.pagination-link {
+
+	text-decoration: none;
+	text-align: center;
+	color: $mainColor;
+	font-size: 1.5rem;
+  font-family: Blrrpixs016; 
+
+	position: absolute;
+	width: 100%;
+
+}
+
+.pagination-link--label {
+
+	color: $linkColor !important;
+
 }
