Add href to links

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,12 +6,12 @@
 			</a>
 		</li>
 		<li class="menu-item">
-			<a class="menu-item--title noselect">
+			<a href="/about" class="menu-item--title noselect">
 			O mnie
 			</a>
 		</li>
 		<li class="menu-item">
-			<a class="menu-item--title menu-item--title_submenu noselect">
+			<a href="#" class="menu-item--title menu-item--title_submenu noselect">
 			Kategorie
 			</a>
 			<ul class="submenu">
