--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="page-footer">
-	<p class="page-footer--copyright">&copy; Wojciech Sadowski, 2019. Wszelkie prawa zastrzeżone.</p>
+	<p class="page-footer--copyright">&copy; Wojciech Sadowski, 2019.</p>
 </footer>
