Add href to post title

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,7 +1,7 @@
 {% assign post=include.post %}
 <article class="post">
 	<header class="post-heading">
-		<a class="post-title">{{ post.title }}</a>
+		<a class="post-title" href="{{ post.url | relative_url }}">{{ post.title }}</a>
 		<p class="post-meta">
 				<time class="post-meta--time" datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%d-%m-%Y" }}</time>
 				{% if post.author %} • {{ post.author }}{% endif %}{% for category in post.categories %} • <a class="link post-meta--category" href="{{ site.url }}{{ site.baseurl }}/{{ category | url_encode }}">{{ site.categories_names[category] }}</a>{% endfor %}
