Add rwd for website

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -12,4 +12,16 @@
 
 	font-family: Blrrpixs016;
 
+	padding-left: 20px;
+
+}
+
+@media all and (max-width: 670px){
+
+	.page-footer--copyright {
+
+		text-align: center;
+	
+	}
+
 }
