--- a/_sass/pagination.scss
+++ b/_sass/pagination.scss
@@ -3,12 +3,17 @@
 	position: relative;
 	height: 50px;
 
+	margin: 10px 0px;
+
 }
 
 .pagination-list {
 
 	display: flex;
 	flex-flow: row;
+
+	align-items: center;
+	justify-content: center;
 
 	list-style-type: none;
 
@@ -39,6 +44,13 @@
 .pagination-item:hover {
 
 	border-width: 3px;
+
+}
+
+.pagination-item--dots {
+
+	border: none;
+	color: $mainColor;
 
 }
 
