--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
   {% endif %}
   <meta property="og:url" content="{{ page.url | replace:'index.html','' | absolute_url }}">
   <meta property="og:image" content="{{ "/assets/images/logo_og.png" | absolute_url }}">
+  <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="200">
   <meta property="og:image:height" content="200">
 
