Add rss feed icon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
 	</figure>
 	<h1 class="page-header--author noselect">wojtek2kdev</h1>
 	<ul class="page-header--socials">
+		<li><a href="/feeds/feed.xml" target="_blank">r</a></li>
 		<li><a href="https://github.com/wojtek2kdev" target="_blank">&lt;</a></li>
 		<li><a href="">i</a></li>
 		<li><a href="">f</a></li>
