--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -3,11 +3,13 @@
 	height: 300px;
 
 	padding-top: 20px;
+	margin-top: 30px;
 
 	display: grid;
 	grid-template-columns: auto 1fr auto;
 	grid-template-rows: 80px auto 1fr;
 	grid-gap: 10px;
+
 
 	background: $backgroundColor;
 
@@ -139,7 +141,13 @@
 
 	}
 
-	.page-header--author, .page-header--quote {
+	.page-header > .page-header--author {
+
+		display: none;
+
+	}
+
+	.page-header--quote {
 
 		width: 100%;
 		text-align: center;
