Add styles for mobile navbar

--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -165,6 +165,106 @@
 }
 
 
+.mobile-nav {
+		
+		display: none;
+	
+		position: fixed;
+
+    width: 100vw;
+    height: auto;
+		
+		background: black;
+    
+		margin-top: 71px;
+    
+		z-index: 1;
+
+		border-bottom: 3px double $mainColor;
+
+}
+
+.mobile-nav--active {
+
+  display: block;
+
+}
+
+.menu-nav--list {
+
+	display: flex;
+	flex-flow: column;
+
+	width: inherit;
+	height: inherit;
+
+}
+
+.nav-element {
+
+	flex: 1;
+
+	text-align: justify;
+	padding-left: 20px;
+
+	margin: 10px 0px;
+
+}
+
+.nav-element--title {
+
+	font-family: Blrrpixs016;
+	font-size: 1.2rem;
+	text-decoration: none;
+	color: $mainColor;
+
+}
+
+.nav-element--title_submenu:before {
+
+	content: '\025B8';
+	padding-right: 10px;
+
+}
+
+.nav-element--title_submenu-active:before {
+
+	content: "\025BE";
+
+}
+
+.nav-element--title_submenu-active + .nav-categories--submenu {
+
+	display: block;
+
+}
+
+.nav-categories--submenu {
+
+	display: none;
+
+	margin: 20px;
+	margin-top: 10px;
+
+}
+
+.nav-category--submenu_element-name:before {
+
+	content: "- ";
+
+}
+
+.nav-category--submenu_element-name {
+
+	font-family: Blrrpixs016;
+	text-decoration: none;
+	color: $mainColor;
+
+	padding: 10px;
+
+}
+
+
 @media all and (max-width: 670px){
 
 	.page-navigation {
@@ -176,6 +276,16 @@
 	.menu-mobile {
 
 		display: flex;
+
+	}
+
+}
+
+@media all and (min-width: 670px) {
+
+	.mobile-nav {
+
+		display: none;
 
 	}
 
