Add anchor to LinkedIn

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 	<ul class="page-header--socials">
 		<li><a href="/feeds/feed.xml" target="_blank">r</a></li>
 		<li><a href="https://github.com/wojtek2kdev" target="_blank">&lt;</a></li>
-		<li><a href="">i</a></li>
+		<li><a href="https://www.linkedin.com/in/wojciech-sadowski-9442a4157/">i</a></li>
 		<li><a href="">f</a></li>
 		<li><a href="">y</a></li>
 	</ul>
