--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -1,3 +1,27 @@
+sup > a {
+   
+  color: darkgrey;
+  text-decoration: none;
+  font-size: 0.7rem;
+
+}
+
+ol {
+  margin: 10px;
+}
+
+ol.ref {
+ color: darkgrey;
+}
+
+h2,h3 {
+  margin: 0;
+}
+
+a {
+	color: dodgerblue;
+}
+
 .page-heading {
 
 	color: $mainColor;
