--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-  <h1 class="page-heading">Wpisy z kategorii {{ site.categories_names[page.category] | escape }}</h1>
+  <h1 class="page-heading">Wpisy z kategorii: {{ site.categories_names[page.category] | escape }}</h1>
 
   {{ content }}
   {% assign posts = site.categories[page.category] %}
